[package]
name = "cvfft"
version = "0.1.0"
edition = "2021"

[dependencies]
jwalk = "0.8.1"
rayon = "1.10.0"
rustfft = "6.2.0"
symphonia = { version = "0.5.3", features = ["mp3"] }
ndarray = "0.15.6"
image = "0.24.7"
colorgrad = "0.6.2"
clap = { version = "4.4.6", features = ["derive"] }
anyhow = "1.0"
indicatif = "0.17.7"
